{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 500,
  "lineage": "0dae021a-d6ec-d0a9-e43f-d0380c612a68",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "defaultgroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:439135355523:security-group/sg-06871753",
            "description": "default VPC security group",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "*default*"
                ]
              }
            ],
            "id": "sg-06871753",
            "name": "default",
            "tags": {
              "Name": "default"
            },
            "vpc_id": "vpc-ec5b0496"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kube",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:439135355523:instance/i-0ef1a8ef3f39c52ec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "test_profile",
            "id": "i-0ef1a8ef3f39c52ec",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keyfile",
            "monitoring": false,
            "primary_network_interface_id": "eni-0eb3ad2fe21c41c4b",
            "private_dns": "ip-172-31-80-241.ec2.internal",
            "private_ip": "172.31.80.241",
            "public_dns": "ec2-54-210-165-189.compute-1.amazonaws.com",
            "public_ip": "54.210.165.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-037de42b12baabf66",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-72aea05c",
            "tags": {
              "Name": "kube-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06871753"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.test_profile",
            "aws_key_pair.mykey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "apache",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-240315949",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06871753",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "depends_on": [
            "data.aws_security_group.defaultgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3906793925",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06871753",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "data.aws_security_group.defaultgroup"
          ]
        }
      ]
    }
  ]
}